--- a/src/Course/CmsBundle/Resources/views/layout.html.twig
+++ b/src/Course/CmsBundle/Resources/views/layout.html.twig
@@ -1,8 +1,39 @@
 {% extends '::base.html.twig' %}
 
 {% block header %}
-    <header>
-    </header>
+
+    <nav class="navbar navbar-default main-nav">
+
+        <div class="container-fluid col-xs-12 col-sm-12 col-md-12">
+
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+
+                <a class="navbar-brand" href="{{ path('course_cms_homepage') }}">
+                        <img src="" alt="Course"/>
+                </a>
+            </div>
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="{{ path('course_cms_homepage') }}">Liste de courses</a>
+                    </li>
+                    <li>
+                        <a href="{{ path('course_cms_categorie_liste') }}">Catégories</a>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+
+    </nav>
+
 {% endblock %}
 
 {% block content %}{% endblock %}
